--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,32 @@
-/* Base Styles */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,
 body {
+  height: 100%;
+}
+
+.wallet-adapter-button-trigger {
+  background: rgb(100, 26, 230) !important;
+  border-radius: 8px !important;
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+}
+.wallet-adapter-dropdown-list,
+.wallet-adapter-button {
+  font-family: inherit !important;
+}
+
+/* Base Styles */
+/* body {
   margin: 0;
   padding: 0;
   font-family: "Inter", sans-serif;
   background-color: #0d1117;
   color: #c9d1d9;
   line-height: 1.6;
-}
+} */
 
 /* Heading Styles */
 h1,
@@ -25,6 +45,10 @@ h6 {
   align-items: center;
   justify-content: center;
   padding: 20px;
+}
+
+.transfer-box {
+  width: 100%; /* or any other size */
 }
 
 /* Container and Layout */
